claude: adding instructions to configure maven plugins in root pom pluginManagement.